traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:3: error: missing argument list for method && in class Boolean
Unapplied methods are only converted to functions when a function type is expected.
You can make this conversion explicit by writing `$amp$amp _` or `$amp$amp(_)` instead of `$amp$amp`.
    while (getMondeLargeur()-1!=getX() && getMondeHauteur!-1= GetY()){
                                       ^TraversalByColumn:3: error: value !- is not a member of Int
    while (getMondeLargeur()-1!=getX() && getMondeHauteur!-1= GetY()){
                                                         ^TraversalByColumn:3: error: not found: value GetY
    while (getMondeLargeur()-1!=getX() && getMondeHauteur!-1= GetY()){
                                                              ^